sampleIngressNginx/nginx-app-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingresstest
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: ingresstest
  labels:
    app: nginx-pod
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
      protocol: TCP
    readinessProbe:
      httpGet:
        path: /
        port: 80
      periodSeconds: 3
      timeoutSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-pod-svc
  namespace: ingresstest
spec:
  selector:
    app: nginx-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-pod-ingress
  namespace: ingresstest
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-pod-svc
            port:
              number: 80
