sampleIngressNginx/nginx-session-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-sample
spec:
  selector:
    matchLabels:
      app: nginx-sample
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-sample
    spec:
      containers:
      - image: trafex/php-nginx:latest
        name: nginx-sample
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
          - name: index
            mountPath: /usr/share/nginx/html
          - name: config
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
      nodeSelector:
        kubernetes.io/os: linux
      volumes:
      - name: index
        configMap:
          name: nginx-html-cm
      - name: config
        configMap:
          name: nginx-config-cm
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-sample-svc
spec:
  selector:
    app: nginx-sample
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-sample-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-sample-svc
            port:
              number: 80
